Refactor XML file reading and update stream operations for compatibility